# x3f-rs

./: .rustfmt.toml  .taplo.toml  Cargo.toml  flake.nix  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: nix.yaml  release.yaml  rust.yaml
x3f/: Cargo.toml  README.md
x3f/examples/: read_x3f.rs
x3f/src/: data.rs  debug_helper.rs  directory.rs  directory_pointer.rs  header.rs  lib.rs
