[package]
authors.workspace = true
description = "SIGMA Foveon X3F RAW file parser"
edition.workspace = true
license = "MIT OR Apache-2.0"
name = "x3f"
publish.workspace = true
readme = "README.md"
version.workspace = true

[dependencies]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
